2004-08-27  Philippe Gerum  <rpm@xenomai.org>

	* nucleus: Add support for execution timestamps aimed at chasing
	excessive jitter.

	* skins/rtai/pipe.c (__pipe_close_handler): Leave the pipe struct
	alive and wait for a subsequent call to rt_pipe_close() from the
	application.

2004-08-26  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Add 2.6.8rc1-r6c4.

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Integrate
	various bits of user-space context switching in a single area.

	* nucleus/timer.c (xntimer_do_timers): Optimize restart point.

	* arch/ppc/hal/hal.c (rthal_calibration_timer): Return the 1 tick
	(expressed as a count of nanoseconds) instead of zero. The latter
	is a special error value.

	* testsuite/latency/latency.c (cleanup_upon_sig): Stop timer.

	* nucleus/shadow.c (xnshadow_kick_process): Check shared pending
	signal mask too.

2004-08-25  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/hal/hal.c (rthal_calibration_timer): On PowerPC
	systems, the cost of setting the decrementer or the PIT does not
	induce significant latency; so just return zero from there without
	further evaluation.
	(rthal_trap_fault): Add simplistic handling.

	* arch/ppc/hal/switch.S (rthal_context_switch): Fix register
	offset mismatch.

2004-08-24  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/hal/switch.S (rthal_context_switch): Enforce standard
	stack frame overhead.

	* include/nucleus/asm-i386/system.h (xnarch_sleep_on): Properly
	set the task state before sleeping on schedule_timeout().

	* include/nucleus/asm-ppc/system.h (xnarch_program_timer_shot): Do
	not rescale the delay value uselessly.

	* arch/ppc/hal/hal.c (__rthal_init): Fix tunables.timer_freq.

	* arch/i386/hal/hal.c: Make proper use of
	IPIPE_NR_XIRQS/IPIPE_NR_IRQS.

2004-08-23  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/hal/hal.c (rthal_request_timer, rthal_release_timer):
	Implement timer setup code.

	* testsuite/cruncher/cruncher.c: Remove useless and offending